--- a/designs.html
+++ b/designs.html
@@ -47,7 +47,7 @@
           <li><a href="servicios.html">Servicios</a></li>
           <li><a href="designs.html">Diseños</a></li>
           <li><a href="videos.html">Videos</a></li>
-          <li><a href="#contactos">Contáctenos</a></li>
+          <li><a href="contactenos.html">Contáctenos</a></li>
         </ul>
         <button
           class="navbar-toggler"
@@ -94,11 +94,408 @@
                 <a class="nav-link" href="videos.html">Videos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#contactos">Contáctenos</a>
+                <a class="nav-link" href="contactenos.html">Contáctenos</a>
               </li>
             </ul>
           </div>
-          <!-- </div> -->
+        </div>
+      </nav>
+    </header>
+
+    <main>
+      <!-- Sección de Descripción de la empresa -->
+      <section>
+        <article>
+          <div class="texto_section">
+            <h1 class="title_section">Diseños</h1>
+            <div class="parrafo_section">
+              <p>
+                En este apartado te brindamos unas pocas ideas si aún no sabes que
+                tatuaje te quieres hacer.
+              </p>
+              <p>
+                Aquí te mostramos unos pocos diseños, visita nuestras redes
+                sociales para ver más
+              </p>
+            </div>
+          </div>
+        </article>
+      </section>
+      <!-- Catálogo -->
+      <section class="galeria">
+        <h1 class="title_section">Galería</h1>
+        <div class="galeria-designs">
+          <div class="card-design">
+            <img
+              src="assets/images/designs/d (1).png"
+              alt="imágen con diseños variados para tatuajes"
+            />
+          </div>
+          <div class="card-design">
+            <img
+              src="assets/images/designs/d (2).png"
+              alt="imágen con diseños variados para tatuajes"
+            />
+          </div>
+          <div class="card-design">
+            <img
+              src="assets/images/designs/d (3).png"
+              alt="imágen con diseños variados para tatuajes"
+            />
+          </div>
+          <div class="card-design">
+            <img
+              src="assets/images/designs/d (4).png"
+              alt="imágen con diseños variados para tatuajes"
+            />
+          </div>
+          <div class="card-design">
+            <img
+              src="assets/images/designs/d (5).png"
+              alt="imágen con diseños variados para tatuajes"
+            />
+          </div>
+          <div class="card-design">
+            <img
+              src="assets/images/designs/d (6).png"
+              alt="imágen con diseños variados para tatuajes"
+            />
+          </div>
+          <div class="card-design">
+            <img
+              src="assets/images/designs/d (7).png"
+              alt="imágen con diseños variados para tatuajes"
+            />
+          </div>
+          <div class="card-design">
+            <img
+              src="assets/images/designs/d (8).png"
+              alt="imágen con diseños variados para tatuajes"
+            />
+          </div>
+          <div class="card-design">
+            <img
+              src="assets/images/designs/d (9).png"
+              alt="imágen con diseños variados para tatuajes"
+            />
+          </div>
+          <div class="card-design">
+            <img
+              src="assets/images/designs/d (10).png"
+              alt="imágen con diseños variados para tatuajes"
+            />
+          </div>
+          <div class="card-design">
+            <img
+              src="assets/images/designs/d (11).png"
+              alt="imágen con diseños variados para tatuajes"
+            />
+          </div>
+          <div class="card-design">
+            <img
+              src="assets/images/designs/d (12).png"
+              alt="imágen con diseños variados para tatuajes"
+            />
+          </div>
+          <div class="card-design">
+            <img
+              src="assets/images/designs/d (13).png"
+              alt="imágen con diseños variados para tatuajes"
+            />
+          </div>
+          <div class="card-design">
+            <img
+              src="assets/images/designs/d (14).png"
+              alt="imágen con diseños variados para tatuajes"
+            />
+          </div>
+          <div class="card-design">
+            <img
+              src="assets/images/designs/a1.png"
+              alt="imágen de tatuaje de un tigre hecho a color"
+            />
+          </div>
+
+          <div class="card-design">
+            <img
+              src="assets/images/designs/a2.png"
+              alt="imágen de tatuaje de un ojo de dragón hecho a color"
+            />
+          </div>
+
+          <div class="card-design">
+            <img
+              src="assets/images/designs/a11.png"
+              alt="imágen de tatuaje de una bicicleta con un paisaje de fondo hecho a blanco y negro"
+            />
+          </div>
+
+          <div class="card-design">
+            <img
+              src="assets/images/designs/a10.png"
+              alt="imágen de tatuaje de un samurai a blanco y negro con un símbolo rojo de fondo"
+            />
+          </div>
+
+          <div class="card-design">
+            <img
+              src="assets/images/designs/r5.png"
+              alt="imágen de tatuaje de María rezando hecho a blanco y negro"
+            />
+          </div>
+
+          <div class="card-design">
+            <img
+              src="assets/images/designs/r3.png"
+              alt="imágen de tatuaje de un león con su cría hecho a blanco y megro"
+            />
+          </div>
+
+          <div class="card-design">
+            <img
+              src="assets/images/designs/r4.png"
+              alt="imágen de tatuaje de un lobo hecho a blanco y negro con ciertos detalles a color"
+            />
+          </div>
+
+          <div class="card-design">
+            <img
+              src="assets/images/designs/r1.png"
+              alt="imágen de tatuaje de una locomotora a vapor hecho a blanco y negro"
+            />
+          </div>
+
+          <div class="card-design">
+            <img
+              src="assets/images/designs/s1.png"
+              alt="imágen de tatuaje de Goku y Milk hecho a blanco y negro"
+            />
+          </div>
+
+          <div class="card-design">
+            <img
+              src="assets/images/designs/s2.png"
+              alt="imágen de tatuaje de star wars con la estrella de la muerte hecho a blanco y negro con ciertos detalles a color"
+            />
+          </div>
+
+          <div class="card-design">
+            <img
+              src="assets/images/designs/s3.png"
+              alt="imágen de tatuaje de Kakashi hecho a blanco y negro con ciertos detalles a color"
+            />
+          </div>
+
+          <div class="card-design">
+            <img
+              src="assets/images/designs/s5.png"
+              alt="imágen de tatuaje de la máscara de zelda hecha a color"
+            />
+          </div>
+
+          <div class="card-design">
+            <img
+              src="assets/images/designs/s9.png"
+              alt="imágen de tatuajes de distintas series hechas a color"
+            />
+          </div>
+
+          <div class="card-design">
+            <img
+              src="assets/images/designs/v1.png"
+              alt="imágen de tatuaje de un gato con flores de fondo hecho a blanco y negro con ciertos detalles a color"
+            />
+          </div>
+
+          <div class="card-design">
+            <img
+              src="assets/images/designs/v2.png"
+              alt="imágen de tatuaje de un panda con el yin yang de fondo hecho a blanco y negro"
+            />
+          </div>
+
+          <div class="card-design">
+            <img
+              src="assets/images/designs/r8.png"
+              alt="imágen de tatuaje de un girasol y una rosa hecho a color"
+            />
+          </div>
+          <div class="card-design">
+            <img
+              src="assets/images/designs/a5.png"
+              alt="imágen de tatuaje de un panda con el yin yang de fondo hecho a blanco y negro"
+            />
+          </div>
+
+          <div class="card-design">
+            <img
+              src="assets/images/designs/r9.png"
+              alt="imágen de tatuaje de un girasol y una rosa hecho a color"
+            />
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer id="contactos" class="footer">
+      <div class="info-contacto">
+        <h3>Contáctenos</h3>
+        <ul>
+          <li>
+            <a
+              href="https://api.whatsapp.com/send/?phone=50685550337&text&type=phone_number&app_absent=0"
+              target="_blank"
+              ><i class="fa-brands fa-whatsapp"></i
+              ><span> +(506)8555-0337</span></a
+            >
+          </li>
+          <li>
+            <a href="https://www.instagram.com/badilla_edu.art/" target="_blank"
+              ><i class="fa-brands fa-instagram"> </i
+              ><span> @badilla_edu.art</span></a
+            >
+          </li>
+          <li>
+            <a href="https://www.facebook.com/eddobadillatattoo" target="_blank"
+              ><i class="fa-brands fa-facebook"></i
+              ><span> Eduardo Badilla Tattoos</span></a
+            >
+          </li>
+          <li>
+            <a href="https://www.tiktok.com/@eddobadillatattoo" target="_blank"
+              ><i class="fa-brands fa-tiktok"></i
+              ><span> @eddobadillatattoo</span></a
+            >
+          </li>
+          <li>
+            <a href="https://twitter.com/BadillaEddo" target="_blank"
+              ><i class="fa-brands fa-twitter"></i><span> @BadillaEddo</span></a
+            >
+          </li>
+        </ul>
+      </div>
+      <div class="info-direccion">
+        <h4>Dirección</h4>
+        <p>
+          <i class="fa-solid fa-location-dot"></i> Costado Este del parque
+          Palmares, frente a parada de taxis, en Alajuela centro., Alajuela,
+          Costa Rica, 20101
+        </p>
+      </div>
+    </footer>
+
+    <script
+      src="https://kit.fontawesome.com/db9da4ce5b.js"
+      crossorigin="anonymous"
+    ></script>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"
+    ></script>
+  </body>
+</html>
+<!DOCTYPE html>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap"
+      rel="stylesheet"
+    />
+
+    <link
+      rel="shortcut icon"
+      href="assets/images/general/logo.png"
+      type="image/x-icon"
+    />
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
+
+    <link rel="stylesheet" href="CSS/style.css" />
+
+    <link rel="stylesheet" href="CSS/media.css" />
+
+    <title>EDUARDO TATTO SHOP / Diseños</title>
+  </head>
+
+  <body>
+    <header class="header">
+      <!-- Barra de navegación -->
+      <nav class="fixed-top nav_bar">
+        <!-- <div class="container-fluid"> -->
+        <a href="index.html#inicio" class="logo_pagina">
+          <img
+            src="assets/images/general/logo.png"
+            alt="imágen del logo de la empresa"
+        /></a>
+        <ul class="enlaces">
+          <li><a href="about_us.html">¿Quienes somos?</a></li>
+          <li><a href="servicios.html">Servicios</a></li>
+          <li><a href="designs.html">Diseños</a></li>
+          <li><a href="videos.html">Videos</a></li>
+          <li><a href="contactenos.html">Contáctenos</a></li>
+        </ul>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="offcanvas"
+          data-bs-target="#offcanvasNavbar"
+          aria-controls="offcanvasNavbar"
+        >
+          <!-- <i class="fa-solid fa-bars"></i> -->
+          <i class="fa-solid fa-bars icono-burger"></i>
+        </button>
+        <div
+          class="offcanvas offcanvas-end"
+          tabindex="-1"
+          id="offcanvasNavbar"
+          aria-labelledby="offcanvasNavbarLabel"
+        >
+          <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
+              Eduardo Tatto Shop
+            </h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="offcanvas"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="offcanvas-body">
+            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="about_us.html">¿Quienes somos?</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="servicios.html">Servicios</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="designs.html">Diseños</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="videos.html">Videos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contactenos.html">Contáctenos</a>
+              </li>
+            </ul>
+          </div>
         </div>
       </nav>
     </header>
