--- a/servicios.html
+++ b/servicios.html
@@ -46,7 +46,7 @@
           <li><a href="servicios.html">Servicios</a></li>
           <li><a href="designs.html">Diseños</a></li>
           <li><a href="videos.html">Videos</a></li>
-          <li><a href="#contactos">Contáctenos</a></li>
+          <li><a href="contactenos.html">Contáctenos</a></li>
         </ul>
         <button
           class="navbar-toggler"
@@ -93,11 +93,10 @@
                 <a class="nav-link" href="videos.html">Videos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#contactos">Contáctenos</a>
+                <a class="nav-link" href="contactenos.html">Contáctenos</a>
               </li>
             </ul>
           </div>
-          <!-- </div> -->
         </div>
       </nav>
     </header>
