Fase-3-Correcciones-del-html

--- a/videos.html
+++ b/videos.html
@@ -11,7 +11,6 @@
       href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap"
       rel="stylesheet"
     />
-
     <link
       rel="shortcut icon"
       href="assets/images/general/logo.png"
@@ -28,8 +27,7 @@
     <link rel="stylesheet" href="CSS/style.css" />
 
     <link rel="stylesheet" href="CSS/media.css" />
-
-    <title>EDUARDO TATTO SHOP / Sobre Nosotros</title>
+    <title>EDUARDO TATTO SHOP / Videos</title>
   </head>
 
   <body>
@@ -102,157 +100,66 @@
       </nav>
     </header>
 
-    <main class="container-about-us">
+    <main>
       <!-- Sección de Descripción de la empresa -->
-      <section class="section-que-hacemos section">
-        <article class="contenedor">
-          <div class="texto_section">
-            <h1 class="title_section">¿Qúe hacemos?</h1>
-            <p class="parrafo_section">
-              Nosotros nos dedicamos al arte del tatuaje, el cual llevamos a
-              cabo según el diseño o de las ideas que el cliente nos brinde.
-            </p>
-            <p class="parrafo_section">
-              Para posterior plasmarlo en su cuerpo con el estilo y colores que
-              nos solicita
-            </p>
+      <!-- Catálogo -->
+      <section class="galeria">
+        <h1 class="title_section">Proceso de trabajo</h1>
+        <div class="galeria-designs">
+          <div class="card-design">
+            <video src="assets/videos/diseñando.mp4" controls></video>
           </div>
-          <div class="img_section">
-            <img
-              class="img_apartado"
-              src="assets/images/inicio/who_we_are.png"
-              alt="imágen del dueño realizando un tatuaje"
-            />
+          <div class="card-design">
+            <video src="assets/videos/fullback.mp4" controls></video>
           </div>
-        </article>
-      </section>
-
-      <!-- Historia sección 1-->
-
-      <section class="historia1 section">
-        <article class="contenedor">
-          <div class="img_section">
-            <img
-              class="img_apartado"
-              src="assets/images/aboutus/trabajosprevios.jpg"
-              alt="imágen del dueño en sus inicios realizando un tatuaje"
-            />
+          <div class="card-design">
+            <video src="assets/videos/tattopierna.mp4" controls></video>
           </div>
-          <div class="texto_section">
-            <h1 class="title_section">Historia</h1>
-            <p class="parrafo_section">
-              En el 2003 teniendo 14 años y sin recordar bien el porqué, salió
-              una frase que recordamos mi mejor amigo y yo... "Quero ser
-              tatuador"
-            </p>
-
-            <p class="parrafo_section">
-              Y desde ese momento empezó una búsqueda insaciable por ser uno de
-              los mejores tatuadores del país en algún momento
-            </p>
+          <div class="card-design">
+            <video src="assets/videos/mar.mp4" controls></video>
           </div>
-        </article>
-      </section>
-
-      <!-- Historia sección 2-->
-
-      <section class="historia2 section">
-        <article class="contenedor">
-          <div class="texto_section">
-            <p class="parrafo_section">
-              En el 2008 tenía mucha teoría en mi cabeza pero nada de práctica
-              hasta que conocí personas que con ingenio hicieron máquinas
-              caseras ahí crecío más mi deseo
-            </p>
-
-            <p class="parrafo_section">
-              Amigos se unieron a este aprendizaje y práctica junto conmigo pero
-              no fue constante y tuve que dejarlo de lado un tiempo
-            </p>
-          </div>
-          <div class="img_section">
-            <img
-              class="img_apartado"
-              src="assets/images/aboutus/historia.png"
-              alt="imágen del stand de la empresa en una convención"
-            />
-          </div>
-        </article>
-      </section>
-
-      <!-- Sección de Historia 3 -->
-
-      <section class="historia3 section">
-        <div class="texto_section">
-          <p class="parrafo_section">
-            Siendo misceláneo en un banco un amigo me presentó la oportunidad
-            que cambiaría mi vida por completo... una ayuda económica para
-            invertir en equipo nuevo
-          </p>
-
-          <p class="parrafo_section">
-            Y así comencé el camino más difícil también un búsqueda por
-            conseguir lo que hace muchos años atrás anhelaba a ser
-          </p>
-
-          <p class="parrafo_section">
-            Eso fue en el 2013.. Hoy por hoy no soy el mejor y creo que tampoco
-            estoy cerca, pero tengo la esperanza de que algún día lograré mi
-            cometido
-          </p>
         </div>
       </section>
     </main>
     <footer id="contactos" class="footer">
       <div class="info-contacto">
-        <h3 class="title-footer">Contáctenos</h3>
-        <div class="columns">
-          <ul>
-            <li>
-              <a
-                href="https://api.whatsapp.com/send/?phone=50685550337&text&type=phone_number&app_absent=0"
-                target="_blank"
-                ><i class="fa-brands fa-whatsapp"></i
-                ><span> +(506)8555-0337</span></a
-              >
-            </li>
-            <li>
-              <a
-                href="https://www.instagram.com/badilla_edu.art/"
-                target="_blank"
-                ><i class="fa-brands fa-instagram"> </i
-                ><span> @badilla_edu.art</span></a
-              >
-            </li>
-            <li>
-              <a
-                href="https://www.facebook.com/eddobadillatattoo"
-                target="_blank"
-                ><i class="fa-brands fa-facebook"></i
-                ><span> Eduardo Badilla Tattoos</span></a
-              >
-            </li>
-          </ul>
-          <ul>
-            <li>
-              <a
-                href="https://www.tiktok.com/@eddobadillatattoo"
-                target="_blank"
-                ><i class="fa-brands fa-tiktok"></i
-                ><span> @eddobadillatattoo</span></a
-              >
-            </li>
-            <li>
-              <a href="https://twitter.com/BadillaEddo" target="_blank"
-                ><i class="fa-brands fa-twitter"></i
-                ><span> @BadillaEddo</span></a
-              >
-            </li>
-          </ul>
-        </div>
+        <h3>Contáctenos</h3>
+        <ul>
+          <li>
+            <a
+              href="https://api.whatsapp.com/send/?phone=50685550337&text&type=phone_number&app_absent=0"
+              target="_blank"
+              ><i class="fa-brands fa-whatsapp"></i
+              ><span> +(506)8555-0337</span></a
+            >
+          </li>
+          <li>
+            <a href="https://www.instagram.com/badilla_edu.art/" target="_blank"
+              ><i class="fa-brands fa-instagram"> </i
+              ><span> @badilla_edu.art</span></a
+            >
+          </li>
+          <li>
+            <a href="https://www.facebook.com/eddobadillatattoo" target="_blank"
+              ><i class="fa-brands fa-facebook"></i
+              ><span> Eduardo Badilla Tattoos</span></a
+            >
+          </li>
+          <li>
+            <a href="https://www.tiktok.com/@eddobadillatattoo" target="_blank"
+              ><i class="fa-brands fa-tiktok"></i
+              ><span> @eddobadillatattoo</span></a
+            >
+          </li>
+          <li>
+            <a href="https://twitter.com/BadillaEddo" target="_blank"
+              ><i class="fa-brands fa-twitter"></i><span> @BadillaEddo</span></a
+            >
+          </li>
+        </ul>
       </div>
       <div class="info-direccion">
-        <h4 class="title-footer">Dirección</h4>
+        <h4>Dirección</h4>
         <p>
           <i class="fa-solid fa-location-dot"></i> Costado Este del parque
           Palmares, frente a parada de taxis, en Alajuela centro., Alajuela,
