--- a/about_us.html
+++ b/about_us.html
@@ -33,6 +33,7 @@
   </head>
 
   <body>
+    <span id="about_us"></span>
     <header class="header">
       <!-- Barra de navegación -->
       <nav class="fixed-top nav_bar">
@@ -43,7 +44,7 @@
             alt="imágen del logo de la empresa"
         /></a>
         <ul class="enlaces">
-          <li><a href="about_us.html">¿Quienes somos?</a></li>
+          <li><a href="#about_us">¿Quienes somos?</a></li>
           <li><a href="servicios.html">Servicios</a></li>
           <li><a href="designs.html">Diseños</a></li>
           <li><a href="videos.html">Videos</a></li>
@@ -82,7 +83,7 @@
                 <a class="nav-link" href="index.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about_us.html">¿Quienes somos?</a>
+                <a class="nav-link" href="#about_us">¿Quienes somos?</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="servicios.html">Servicios</a>
