--- a/contactenos.html
+++ b/contactenos.html
@@ -42,7 +42,7 @@
   </head>
 
   <body>
-    <span id="inicio"></span>
+    <span id="contactenos"></span>
     <header class="header">
       <!-- Barra de navegación -->
       <nav class="fixed-top nav_bar">
@@ -57,7 +57,7 @@
           <li><a href="servicios.html">Servicios</a></li>
           <li><a href="designs.html">Diseños</a></li>
           <li><a href="videos.html">Videos</a></li>
-          <li><a href="contactenos.html">Contáctenos</a></li>
+          <li><a href="#contactenos">Contáctenos</a></li>
         </ul>
         <button
           class="navbar-toggler"
@@ -104,7 +104,7 @@
                 <a class="nav-link" href="videos.html">Videos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contactenos.html">Contáctenos</a>
+                <a class="nav-link" href="#contactenos">Contáctenos</a>
               </li>
             </ul>
           </div>
@@ -113,7 +113,7 @@
     </header>
 
     <main class="container_inicio">
-        <!--  -->
+      <!--  -->
       <section class="seccion seccion_formulario">
         <h2 class="seccion_formulario__title">
           ¿Desea recibir información sobre nuestras ofertas y eventos?
@@ -121,7 +121,7 @@
         <form class="information">
           <fieldset>
             <div class="mb-3">
-              <label class="formulario__label" for="nombre">Nombre:</label>
+              <label class="formulario__label"  for="nombre">Nombre:</label>
               <input
                 class="form-control"
                 type="text"
@@ -129,10 +129,13 @@
                 required
                 minlength="3"
                 maxlength="80"
+                placeholder="Nombre"
               />
             </div>
             <div class="mb-3">
-              <label class="formulario__label" for="apellidos">Apellidos:</label>
+              <label class="formulario__label" for="apellidos"
+                >Apellidos:</label
+              >
               <input
                 class="form-control"
                 type="text"
@@ -140,6 +143,7 @@
                 required
                 minlength="10"
                 maxlength="100"
+                placeholder="Apellidos"
               />
             </div>
 
@@ -154,25 +158,35 @@
             </div>
 
             <div class="mb-3">
-                <label class="formulario__label" for="telefono">Teléfono:</label>
-                <input
-                  class="form-control"
-                  type="text"
-                  id="telefono"
-                  placeholder="85489613"
-                />
-              </div>
-            <input
-              class="btn btn-dark boton-enviar"
-              type="button"
-              value="Enviar"
-            />
+              <label class="formulario__label" for="telefono">Teléfono:</label>
+              <input
+                class="form-control"
+                type="text"
+                id="telefono"
+                placeholder="85489613"
+              />
+            </div>
+            <div class="mb-3">
+              <input
+                class="btn btn-dark boton-enviar"
+                type="button"
+                value="Enviar"
+              />
+            </div>
           </fieldset>
         </form>
       </section>
 
-      <section class="seccion seccion_mapa">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2859.6108858634043!2d-84.21464354336635!3d10.019100338295555!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa0f9cfbd015875%3A0x4e0a4dea3e1e571e!2sEduardo%20Badilla%20Tattoos!5e0!3m2!1ses!2scr!4v1681859262356!5m2!1ses!2scr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <section class="seccion_mapa">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2859.6108858634043!2d-84.21464354336635!3d10.019100338295555!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa0f9cfbd015875%3A0x4e0a4dea3e1e571e!2sEduardo%20Badilla%20Tattoos!5e0!3m2!1ses!2scr!4v1681859262356!5m2!1ses!2scr"
+          width="600"
+          height="450"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
       </section>
     </main>
 
