--- a/designs.html
+++ b/designs.html
@@ -33,6 +33,7 @@
   </head>
 
   <body>
+    <span id="designs"></span>
     <header class="header">
       <!-- Barra de navegación -->
       <nav class="fixed-top nav_bar">
@@ -45,7 +46,7 @@
         <ul class="enlaces">
           <li><a href="about_us.html">¿Quienes somos?</a></li>
           <li><a href="servicios.html">Servicios</a></li>
-          <li><a href="designs.html">Diseños</a></li>
+          <li><a href="#designs">Diseños</a></li>
           <li><a href="videos.html">Videos</a></li>
           <li><a href="contactenos.html">Contáctenos</a></li>
         </ul>
@@ -88,7 +89,7 @@
                 <a class="nav-link" href="servicios.html">Servicios</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="designs.html">Diseños</a>
+                <a class="nav-link" href="#designs">Diseños</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="videos.html">Videos</a>
