--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
        <!-- Barra de navegación -->
        <nav class="fixed-top nav_bar">
          <!-- <div class="container-fluid"> -->
-         <a href="index.html#inicio" class="logo_pagina">
+         <a href="#inicio" class="logo_pagina">
            <img
              src="assets/images/general/logo.png"
              alt="imágen del logo de la empresa"
@@ -96,7 +96,7 @@
            <div class="offcanvas-body">
              <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                <li class="nav-item">
-                 <a class="nav-link" href="index.html">Inicio</a>
+                 <a class="nav-link" href="#inicio">Inicio</a>
                </li>
                <li class="nav-item">
                  <a class="nav-link" href="about_us.html">¿Quienes somos?</a>
