--- a/servicios.html
+++ b/servicios.html
@@ -32,6 +32,7 @@
   </head>
 
   <body>
+    <span id="servicios"></span>
     <header class="header">
       <!-- Barra de navegación -->
       <nav class="fixed-top nav_bar">
@@ -43,7 +44,7 @@
         /></a>
         <ul class="enlaces">
           <li><a href="about_us.html">¿Quienes somos?</a></li>
-          <li><a href="servicios.html">Servicios</a></li>
+          <li><a href="#servicios">Servicios</a></li>
           <li><a href="designs.html">Diseños</a></li>
           <li><a href="videos.html">Videos</a></li>
           <li><a href="contactenos.html">Contáctenos</a></li>
@@ -84,7 +85,7 @@
                 <a class="nav-link" href="about_us.html">¿Quienes somos?</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="servicios.html">Servicios</a>
+                <a class="nav-link" href="#servicios">Servicios</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="designs.html">Diseños</a>
