--- a/videos.html
+++ b/videos.html
@@ -31,6 +31,7 @@
   </head>
 
   <body>
+    <span id="videos"></span>
     <header class="header">
       <!-- Barra de navegación -->
       <nav class="fixed-top nav_bar">
@@ -44,7 +45,7 @@
           <li><a href="about_us.html">¿Quienes somos?</a></li>
           <li><a href="servicios.html">Servicios</a></li>
           <li><a href="designs.html">Diseños</a></li>
-          <li><a href="videos.html">Videos</a></li>
+          <li><a href="#videos">Videos</a></li>
           <li><a href="contactenos.html">Contáctenos</a></li>
         </ul>
         <button
@@ -89,7 +90,7 @@
                 <a class="nav-link" href="designs.html">Diseños</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="videos.html">Videos</a>
+                <a class="nav-link" href="#videos">Videos</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contactenos.html">Contáctenos</a>
