Fase-3-Correciones-de-html-css-v2

--- a/servicios.html
+++ b/servicios.html
@@ -113,7 +113,14 @@
               aumentar según ciertas características.
             </p>
           </div>
-          <div class="img_section">
+          <div class="section_horario">
+            <h1 class="title_section">Horario de trabajo</h1>
+            <p class="parrafo_section">
+              De Lúnes a Sábado de 10:00 am hasta las 7:00 pm.
+            </p>
+          </div>
+          
+          <div class="table_section">
             <div class="texto_section">
               <div class="tabla">
                 <caption>
