fase-3-arreglos del css 7:46pm

--- a/contactenos.html
+++ b/contactenos.html
@@ -112,7 +112,7 @@
       </nav>
     </header>
 
-    <main class="container_inicio">
+    <main class="container_contacts">
       <!--  -->
       <section class="seccion seccion_formulario">
         <h2 class="seccion_formulario__title">
