--- a/videos.html
+++ b/videos.html
@@ -104,7 +104,7 @@
     <main>
       <!-- Sección de Descripción de la empresa -->
       <!-- Catálogo -->
-      <section class="galeria">
+      <section class="galeria-videos">
         <h1 class="title_section">Proceso de trabajo</h1>
         <div class="galeria-designs">
           <div class="card-design">
