--- a/contactenos.html
+++ b/contactenos.html
@@ -119,107 +119,145 @@
           ¿Desea recibir información sobre nuestras ofertas y eventos?
         </h2>
         <form class="formulario" id="formulario">
-            <!-- Grupo: Nombre -->
-            <div class="formulario__grupo" id="grupo__nombre">
-              <label for="nombre" class="formulario__label">Nombre:</label>
-              <div class="formulario__grupo-input">
-                  <input type="text" class="formulario__input" name="nombre" id="nombre" placeholder="Marcus">
-                  <i class="fa-regular fa-circle-xmark formulario__validacion-estado"></i>
-              </div>
-              <p class="formulario__input-error">El nombre debe contener de 4 a 16 caractéres y solo puede contener letras.</p>
+          <!-- Grupo: Nombre -->
+          <div class="formulario__grupo" id="grupo__nombre">
+            <label for="nombre" class="formulario__label">Nombre:</label>
+            <div class="formulario__grupo-input">
+              <input
+                type="text"
+                class="formulario__input"
+                name="nombre"
+                id="nombre"
+                placeholder="Marcus"
+              />
+              <i
+                class="fa-regular fa-circle-xmark formulario__validacion-estado"
+              ></i>
             </div>
+            <p class="formulario__input-error">
+              El nombre debe contener de 4 a 16 caractéres y solo puede contener
+              letras.
+            </p>
+          </div>
 
-            <!-- Grupo: Apellidos -->
-            <div class="formulario__grupo" id="grupo__apellidos">
-              <label for="apellidos" class="formulario__label">Apellidos:</label>
-              <div class="formulario__grupo-input">
-                  <input type="text" class="formulario__input" name="apellidos" id="apellidos" placeholder="Barrantes">
-                  <i class="fa-regular fa-circle-xmark formulario__validacion-estado"></i>
-              </div>
-              <p class="formulario__input-error">El campo apellidos solo puede contener letras.</p>
+          <!-- Grupo: Apellidos -->
+          <div class="formulario__grupo" id="grupo__apellidos">
+            <label for="apellidos" class="formulario__label">Apellidos:</label>
+            <div class="formulario__grupo-input">
+              <input
+                type="text"
+                class="formulario__input"
+                name="apellidos"
+                id="apellidos"
+                placeholder="Barrantes"
+              />
+              <i
+                class="fa-regular fa-circle-xmark formulario__validacion-estado"
+              ></i>
             </div>
+            <p class="formulario__input-error">
+              El campo apellidos solo puede contener letras.
+            </p>
+          </div>
 
-            <!-- Grupo: E-mail -->
-            <div class="formulario__grupo" id="grupo__correo">
-              <label for="correo" class="formulario__label">Correo Electrónico:</label>
-              <div class="formulario__grupo-input">
-                  <input type="text" class="formulario__input" name="correo" id="correo" placeholder="marBar3@example.com">
-                  <!-- <input type="email" class="formulario__input" name="correo" id="correo" placeholder="example@example.com"> -->
-                  <i class="fa-regular fa-circle-xmark formulario__validacion-estado"></i>
-              </div>
-              <p class="formulario__input-error">El correo solo puede contener número, letras, punto y guíon bajo.</p>
-            </div> 
-
-            <!-- Grupo: Teléfono -->
-            <div class="formulario__grupo" id="grupo__telefono">
-                <label for="telefono" class="formulario__label">Teléfono:</label>
-                <div class="formulario__grupo-input">
-                    <input type="text" class="formulario__input" name="telefono" id="telefono" placeholder="85329503">
-                    <i class="fa-regular fa-circle-xmark formulario__validacion-estado"></i>
-                </div>
-                <p class="formulario__input-error">El teléfono solo puede contenedr número y el máximo son 8 dígitos.</p>
+          <!-- Grupo: E-mail -->
+          <div class="formulario__grupo" id="grupo__correo">
+            <label for="correo" class="formulario__label"
+              >Correo Electrónico:</label
+            >
+            <div class="formulario__grupo-input">
+              <input
+                type="text"
+                class="formulario__input"
+                name="correo"
+                id="correo"
+                placeholder="marBar3@example.com"
+              />
+              <!-- <input type="email" class="formulario__input" name="correo" id="correo" placeholder="example@example.com"> -->
+              <i
+                class="fa-regular fa-circle-xmark formulario__validacion-estado"
+              ></i>
             </div>
+            <p class="formulario__input-error">
+              El correo solo puede contener número, letras, punto y guíon bajo.
+            </p>
+          </div>
+
+          <!-- Grupo: Teléfono -->
+          <div class="formulario__grupo" id="grupo__telefono">
+            <label for="telefono" class="formulario__label">Teléfono:</label>
+            <div class="formulario__grupo-input">
+              <input
+                type="text"
+                class="formulario__input"
+                name="telefono"
+                id="telefono"
+                placeholder="85329503"
+              />
+              <i
+                class="fa-regular fa-circle-xmark formulario__validacion-estado"
+              ></i>
+            </div>
+            <p class="formulario__input-error">
+              El teléfono solo puede contenedr número y el máximo son 8 dígitos.
+            </p>
+          </div>
 
           <!-- Grupo: Comentarios -->
           <div class="formulario__grupo" id="grupo__comentarios">
-              <label for="comentarios" class="formulario__label">Comentarios:</label>
-              <div class="formulario__grupo-input">
-              <textarea name="comentarios" id="comentarios" cols="30" rows="10" class="formulario_textarea formulario__input"  placeholder="Dejenos sus opiniones"></textarea>
-              </div>
+            <label for="comentarios" class="formulario__label"
+              >Comentarios:</label
+            >
+            <div class="formulario__grupo-input">
+              <textarea
+                name="comentarios"
+                id="comentarios"
+                cols="30"
+                rows="10"
+                class="formulario_textarea formulario__input"
+                placeholder="Dejenos sus opiniones"
+              ></textarea>
+            </div>
+          </div>
+          <div class="formulario__grupo">
+
+            <button id="boton_enviar" class="btn btn-dark boton-enviar" type="submit" >
+              Enviar
+            </button>
           </div>
 
-            <div class="formulario__grupo formulario__mensaje" id="formulario__mensaje">
-              <p>
-                <i class="fa-solid fa-triangle-exclamation"></i>
-                <b>Error:</b> por favor llenar el formulario correctamente
-              </p>
-            </div>
-            <div class="formulario__grupo">
-              <button class="btn btn-dark boton-enviar" type="submit">Enviar</button>
-            </div>
+          <div
+          class="formulario__grupo formulario__mensaje"
+          id="formulario__mensaje"
+        >
+          <p>
+            <i class="fa-solid fa-triangle-exclamation"></i>
+            <b>Error:</b> por favor llenar el formulario correctamente
+          </p>
+        </div>
         </form>
       </section>
 
-      <!-- Button trigger modal -->
-
-      <button id="btn_ejecutar_modal" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-target="#staticBackdrop">
-        Launch demo modal
-      </button>
 
       <!-- Modal -->
-      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" data-bs-backdrop="static">
-        <div class="modal-dialog modal-dialog-centered">
+
+      <div class="modal fade" tabindex="-1" role="dialog" id="miModal" data-bs-backdrop="static" >
+        <div class="modal-dialog modal-dialog-centered" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </button>
             </div>
             <div class="modal-body">
-              <p class="textoModal" id="textoModal"></p>
+              <h5 class="modal-title">Datos enviados exitosamente !!</h5>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
             </div>
           </div>
         </div>
       </div>
-
-      <dialog id="modal" class="ownModal">
-        <div class="modal-dialog modal-dialog-centered">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-              <p class="textoModal" id="textoModal"></p>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            </div>
-          </div>
-        </div>
-      </dialog>
+      
 
       <section class="seccion_mapa">
         <iframe
@@ -303,6 +341,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="JS/script.js" type="text/javascript" async></script>
+    <script src="JS/script.js" type="text/javascript" async defer></script>
   </body>
 </html>
