Fase-3-Ajuste-en-elcarousel-20/04/23 11:42

--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
              <div class="carousel-item active" data-bs-interval="10000">
                <div class="carousel-cards">
                  <img
+                 class="carousel_img-izq"
                    src="assets/images/designs/a8.png"
                    alt="imagen de tatuajes"
                  />
@@ -213,6 +214,8 @@
                    alt="imagen de tatuajes"
                  />
                  <img
+                 class="carousel_img-der"
+
                    src="assets/images/designs/s10.png"
                    alt="imagen de tatuajes"
                  />
