Fase-3-Animaciones-Correciones-EjecVideo

--- a/contactenos.html
+++ b/contactenos.html
@@ -341,6 +341,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="JS/script.js" type="text/javascript" async defer></script>
+    <script src="JS/formulario.js" type="text/javascript" async ></script>
   </body>
 </html>
