--- a/designs.html
+++ b/designs.html
@@ -338,52 +338,64 @@
       </section>
     </main>
 
-    <footer id="contactos" class="footer">
-      <div class="info-contacto">
-        <h3>Contáctenos</h3>
-        <ul>
-          <li>
-            <a
-              href="https://api.whatsapp.com/send/?phone=50685550337&text&type=phone_number&app_absent=0"
-              target="_blank"
-              ><i class="fa-brands fa-whatsapp"></i
-              ><span> +(506)8555-0337</span></a
-            >
-          </li>
-          <li>
-            <a href="https://www.instagram.com/badilla_edu.art/" target="_blank"
-              ><i class="fa-brands fa-instagram"> </i
-              ><span> @badilla_edu.art</span></a
-            >
-          </li>
-          <li>
-            <a href="https://www.facebook.com/eddobadillatattoo" target="_blank"
-              ><i class="fa-brands fa-facebook"></i
-              ><span> Eduardo Badilla Tattoos</span></a
-            >
-          </li>
-          <li>
-            <a href="https://www.tiktok.com/@eddobadillatattoo" target="_blank"
-              ><i class="fa-brands fa-tiktok"></i
-              ><span> @eddobadillatattoo</span></a
-            >
-          </li>
-          <li>
-            <a href="https://twitter.com/BadillaEddo" target="_blank"
-              ><i class="fa-brands fa-twitter"></i><span> @BadillaEddo</span></a
-            >
-          </li>
-        </ul>
-      </div>
-      <div class="info-direccion">
-        <h4>Dirección</h4>
-        <p>
-          <i class="fa-solid fa-location-dot"></i> Costado Este del parque
-          Palmares, frente a parada de taxis, en Alajuela centro., Alajuela,
-          Costa Rica, 20101
-        </p>
-      </div>
-    </footer>
+<!-- Footer -->
+<footer id="contactos" class="footer">
+  <div class="info-contacto">
+    <h3 class="title-footer">Contáctenos</h3>
+    <div class="columns">
+      <ul>
+        <li>
+          <a
+            href="https://api.whatsapp.com/send/?phone=50685550337&text&type=phone_number&app_absent=0"
+            target="_blank"
+            ><i class="fa-brands fa-whatsapp"></i
+            ><span> +(506)8555-0337</span></a
+          >
+        </li>
+        <li>
+          <a
+            href="https://www.instagram.com/badilla_edu.art/"
+            target="_blank"
+            ><i class="fa-brands fa-instagram"> </i
+            ><span> @badilla_edu.art</span></a
+          >
+        </li>
+        <li>
+          <a
+            href="https://www.facebook.com/eddobadillatattoo"
+            target="_blank"
+            ><i class="fa-brands fa-facebook"></i
+            ><span> Eduardo Badilla Tattoos</span></a
+          >
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a
+            href="https://www.tiktok.com/@eddobadillatattoo"
+            target="_blank"
+            ><i class="fa-brands fa-tiktok"></i
+            ><span> @eddobadillatattoo</span></a
+          >
+        </li>
+        <li>
+          <a href="https://twitter.com/BadillaEddo" target="_blank"
+            ><i class="fa-brands fa-twitter"></i
+            ><span> @BadillaEddo</span></a
+          >
+        </li>
+      </ul>
+    </div>
+  </div>
+  <div class="info-direccion">
+    <h4 class="title-footer">Dirección</h4>
+    <p>
+      <i class="fa-solid fa-location-dot"></i> Costado Este del parque
+      Palmares, frente a parada de taxis, en Alajuela centro., Alajuela,
+      Costa Rica, 20101
+    </p>
+  </div>
+</footer>
 
     <script
       src="https://kit.fontawesome.com/db9da4ce5b.js"
@@ -395,5 +407,8 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="JS/animaciones.js" type="text/javascript" async ></script>
+
   </body>
 </html>
